--- a/ACA/package.json
+++ b/ACA/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
-    "react": "^19.1.0",
+    "lucide": "^0.536.0",
+    "react": "^19.1.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
