--- a/ACA/package.json
+++ b/ACA/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
     "lucide": "^0.536.0",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
